# magnetix_toolbox

./: .gitignore  LICENSE  README.md
examples/magnetistatic_2D/TEAM_Problem_32/: TeamProblem32_setup.py
examples/magnetostatic_2D/: CMakeLists.txt  main.cpp
examples/magnetostatic_2D/TEAM_Problem_32/: TeamProblem32_setup.py  evalFieldQuery.py
examples/magnetostatic_2D/TEAM_Problem_32/input/sources/: TEAM_Problem_32_case_3.xml  TEAM_Problem_32_case_3_two_periods.xml
examples/magnetostatic_2D/TEAM_Problem_32/input/validation/: TEAM_Problem_32_case_3_flux.xml
hysteresis_model/: CMakeLists.txt
hysteresis_model/main_lib/: dpc_hysteresis-config.cmake
hysteresis_model/main_lib/include/: hystLib_constants.h  hystLib_functions.h
hysteresis_model/main_lib/include/Hysteresis_Operator/: continuous_dpc_model.h  critical_surface_inline.h  dpc_grid_contructor.h  dpc_hysteresis_model.h  dpc_hysteresis_model_inline.h  elementary_hysteron.h  elementary_hysteron_inline.h  malloc_grid.h  xml_grid_constructor.h
hysteresis_model/main_lib/include/Hysteresis_Operator/Identification/: dpc_identification_2D.h  identification_grid_constructor.h
hysteresis_model/main_lib/include/Hysteresis_Operator/Misc_Tools/: cont_int_table.h  hyst_config.h
hysteresis_model/main_lib/include/Hysteresis_Operator/critical_surface/: generic_critical_surface.h  known_shapes.h
hysteresis_model/main_lib/include/Hysteresis_Operator/critical_surface/shapes/: CS_sphere.h  CS_sphere_cont.h  CS_sphere_gen.h  CS_sphere_inline.h
hysteresis_model/main_lib/include/Hysteresis_Operator/critical_surface/special/: unfrozen_surface.h
hysteresis_model/main_lib/src/: CMakeLists.txt  continuous_dpc_model.cpp  dpc_hysteresis_model.cpp  elementary_hysteron.cpp  hystLib_functions.cpp  malloc_grid.cpp  xml_grid_constructor.cpp
hysteresis_model/main_lib/src/critical_surface/shapes/: CS_sphere.cpp  CS_sphere_gen.cpp
